--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -387,6 +387,7 @@
       "nameItalian": "Opis (italijanščina)",
       "nameGerman": "Opis (nemščina)",
       "nameEnglish": "Opis (angleščina)",
+      "taxRate": "Davčna stopnja",
       "price": "Cena",
       "group": "Skupina",
       "type": "Vrsta",
