inserting premises into database, BE method, fetching and displaying the data on FE

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -409,6 +409,14 @@
   "settingsUsers": {
     "viewProfile": "View Profile"
   },
+  "settingsLocations": {
+    "headerLocations": "Locations",
+    "locationsColumn": {
+      "name": "Name",
+      "address": "Address",
+      "city": "City"
+    }
+  },
   "servicesAndProducts": {
     "headerProducts": "Products",
     "addProduct": "Add product",
