users data now editable

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -407,7 +407,14 @@
     }
   },
   "settingsUsers": {
-    "viewProfile": "View Profile"
+    "editProfile": "Edit profile",
+    "editProfileModal": {
+      "name": "Name",
+      "mail": "Mail",
+      "phone": "Phone",
+      "close": "Close",
+      "save": "Save"
+    }
   },
   "settingsLocations": {
     "headerLocations": "Locations",
