now displaying inactive locations under settings

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -432,8 +432,9 @@
       "city": "City",
       "address": "Address",
       "save": "Save",
-      "close":  "Close"
-    }
+      "close": "Close"
+    },
+    "headerInactiveLocations": "Inactive locations"
   },
   "servicesAndProducts": {
     "headerProducts": "Products",
