--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -433,7 +433,8 @@
       "address": "Naslov",
       "save": "Shrani",
       "close": "Zapri"
-    }
+    },
+    "headerInactiveLocations": "Neaktivne lokacije"
   },
   "servicesAndProducts": {
     "headerProducts": "Produkti",
