Add messages about saving invoice

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -300,6 +300,8 @@
   },
   "invoice": {
     "invoiceHeader": "Invoice",
+    "saved": "Invoice saved",
+    "notSaved": "Somethings wrong contact admin",
     "invoiceInfo": {
       "invoiceDate": "Date",
       "invoiceTotal": "Total",
