modification of 'EPR/files'

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -175,6 +175,7 @@
       "sortBy": "Sort by",
       "addFile": "Add file",
       "fileName": "File name",
+      "fileType": "File type",
       "fileCreatedAt": "Created at"
     },
     "invoicesTab": "Invoices",
