--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -175,6 +175,7 @@
       "sortBy": "Razvrsti po",
       "addFile": "Dodaj datoteko",
       "fileName": "Ime datoteke",
+      "fileType": "Vrsta datoteke",
       "fileCreatedAt": "Ustvarjeno"
     },
     "invoicesTab": "Računi",
