update business page

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -525,6 +525,7 @@
       "businessCity": "City",
       "businessTaxNumber": "Tax Number",
       "businessZIPCode": "ZIP code",
+      "businessCountry": "Country",
       "businessAction": "Action"
     },
     "addBusinessModal": {
@@ -535,6 +536,7 @@
       "city": "City",
       "taxNumber": "Tax Number",
       "zipCode": "ZIP code",
+      "countries": "Countries",
       "close": "Close",
       "save": "Save"
     }
