--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -345,7 +345,7 @@
       "selectPatient": "Izberi pacienta",
       "patient": "Pacient",
       "close": "Zapri",
-      "create": "Ustvari račun"
+      "create": "Ustvari avansni račun"
     },
     "newAdvPayment": {
       "newAdvPaymentHeader": "Nov avansni račun",
