localization of advance payment pdf

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -350,11 +350,32 @@
     "newAdvPayment": {
       "newAdvPaymentHeader": "New advance payment",
       "alert": "Payment method amount must be the same as advance payment amount and can't be 0!",
+      "alert2": "Advance payment amount can't be 0",
+      "alert3": "Payment method must be selected",
       "paymentMethodSummary": "Payment method summary",
       "downloadPrint": "Download print",
       "saveDraft": "Save advance payment as draft",
       "save": "Save and confirm",
-      "dateOfAdvPayment": "Issue date",
+      "IBAN": "IBAN",
+      "vatId": "VAT ID no.",
+      "regNumber": "Registration no.",
+      "dateOfAdvPayment": "Date of issue",
+      "advPaymentNo": "ADVANCE PAYMENT no.",
+      "copy": "Copy",
+      "IssuedIn": "Issued in",
+      "code": "Code",
+      "item": "Item",
+      "quantity": "Quantity",
+      "price": "Price",
+      "value": "Value",
+      "amount": "Amount",
+      "total": "Total",
+      "payment": "Payment",
+      "paymentMethod": "Payment method",
+      "vatExemptionReason": "In accordance with points 2 and 4 of the first paragraph of Article 42 of ZDDV-1, health services and care are exempt from VAT, therefore no VAT has been charged.",
+      "issuedBy": "Issued by",
+      "zoi": "ZOI",
+      "eor": "EOR",
       "details": {
         "header": "Advance payment details",
         "item": "Item",
