--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -350,11 +350,32 @@
     "newAdvPayment": {
       "newAdvPaymentHeader": "Nov avansni račun",
       "alert": "Znesek načina plačila mora biti enak znesku avansnega računa in ne more biti 0!",
+      "alert2": "Znesek avansnega računa ne sme biti 0",
+      "alert3": "Izbrati morate način plačila",
       "paymentMethodSummary": "Povzetek načina plačila",
       "downloadPrint": "Prenesi tiskano verzijo",
       "saveDraft": "Shrani kot osnutek",
-      "save": "Shrani i potvrdi",
+      "save": "Shrani in potrdi",
+      "IBAN": "IBAN",
+      "vatId": "ID štev. za DDV",
+      "regNumber": "Matična št.",
       "dateOfAdvPayment": "Datum izdaje",
+      "advPaymentNo": "AVANSNI RAČUN št.",
+      "copy": "Izvod",
+      "IssuedIn": "Kraj izdaje",
+      "code": "Šifra",
+      "item": "Opis",
+      "quantity": "Kol/g",
+      "price": "Cena/EM",
+      "value": "Vrednost",
+      "amount": "Znesek",
+      "total": "Skupaj",
+      "payment": "Vplačilo",
+      "paymentMethod": "Način plačila",
+      "vatExemptionReason": "Zdravstvene storitve in oskrba so v skladu z 2. in 4. točko, prvega odstavka, 42 člena ZDDV-1, oproščene plačila DDV, zato DDV ni nil obračunan",
+      "issuedBy": "Račun izdal",
+      "zoi":  "ZOI",
+      "eor":  "EOR",
       "details": {
         "header": "Podatki o avansnem računu",
         "item": "Opis",
