add "open assignments" in patient page

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -140,7 +140,7 @@
       "allergiesUpdated": "Last updated",
       "patientNotes": "Patient notes",
       "patientNotesOpen": "Open",
-      "openAppointments": "Open appointments",
+      "openAssignments": "Open assignments",
       "futureAppointments": "Future appointments",
       "pastAppointments": "Past appointments",
       "notSelected": "Not selected"
