updated view patient

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -439,6 +439,7 @@
       "enquiry": "Enquiry",
       "description": "Description",
       "due_at": "Date",
+      "users": "Users",
       "close": "Close",
       "save": "Save"
     }
