--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -351,7 +351,7 @@
     },
     "newAdvPayment": {
       "newAdvPaymentHeader": "New advance payment",
-      "alert": "Payment method amount must be the same as advance payment amount and can't be 0!",
+      "alert": "Payment method amount must be the same as advance payment amount",
       "alert2": "Advance payment amount can't be 0",
       "alert3": "Payment method must be selected",
       "paymentMethodSummary": "Payment method summary",
