updated names in EPR

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -132,7 +132,9 @@
       "deletePatient": "Delete patient",
       "personalDoctors": "Personal doctors",
       "personalDentist": "Personal dentist",
+      "Dentist": "Dentist",
       "personalSurgeon": "Personal surgeon",
+      "Surgeon": "Surgeon",
       "files": "Files",
       "generalNotes": "General notes",
       "generalNotesUpdated": "Last updated",
