--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -309,7 +309,8 @@
     "invoiceInfo": {
       "invoiceDate": "Datum",
       "invoiceTotal": "Znesek",
-      "invoiceStatus": "Status",
+      "invoiceStatus": "Status potrditve",
+      "paymentStatus": "Status plačila",
       "invoiceDetails": "Prejemnik",
       "invoiceIssuedIn": "Kraj izdaje",
       "invoiceIssuedBy": "Izdal"
