--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -27,7 +27,9 @@
     "users": "Uporabniki",
     "locations": "Lokacije",
     "services and products": "Storitve in Izdelki",
-    "invoicing": "Izdajanje računov"
+    "invoicing": "Izdajanje računov",
+    "free slots": "Prosti termini",
+    "business customers": "Poslovne stranke"
   },
   "nav": {
     "allNotifications": "Vsa obvestila",
