--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -107,7 +107,7 @@
   "calendarEvent": {
     "start": "Start",
     "duration": "Duration",
-    "notes": "Notes",
+    "note": "Note",
     "changeColor": "Change Color",
     "viewPatient": "View Patient",
     "changeDisplayColor": "Change Appointment Color",
