upd "event details" modal in calendar

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -114,7 +114,8 @@
     "appointmentCancelled": "Appointment Cancelled by the Patient",
     "patient": "Patient",
     "doctor": "Doctor",
-    "location": "Location"
+    "location": "Location",
+    "patient_attended": "Patient attended"
   },
   "patients": {
     "patientsHeader": "Patients",
