upd "event details" modal

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -109,6 +109,7 @@
     "duration": "Duration",
     "note": "Note",
     "changeColor": "Change Color",
+    "labels": "Labels",
     "viewPatient": "View Patient",
     "changeDisplayColor": "Change Appointment Color",
     "appointmentCancelled": "Appointment Cancelled by the Patient",
