upd edit modal in calendar

--- a/SmartPRM-ClinicModule/src/locales/en.json
+++ b/SmartPRM-ClinicModule/src/locales/en.json
@@ -102,7 +102,7 @@
   "calendar": {
     "selectDoctor": "Select Doctor",
     "selectAll": "Select All",
-    "bookAppointment": "Book Appointment"
+    "addAppointment": "Add Appointment"
   },
   "calendarEvent": {
     "start": "Start",
