--- a/SmartPRM-ClinicModule/src/locales/sl.json
+++ b/SmartPRM-ClinicModule/src/locales/sl.json
@@ -321,6 +321,7 @@
     "invoiceHeader": "Račun",
     "saved": "Račun shranjen",
     "notSaved": "Napaka, kontaktirajte administratorja",
+    "pdfGuarantee": "Garancija velja ob rednih zobozdravstvenih pregledih vsaj enkrat ali dvakrat letno ter rednem vzdrževanju ustne higijene.",
     "invoiceInfo": {
       "invoiceDate": "Datum",
       "invoiceTotal": "Znesek",
